--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  width: 1600px;
 }
 
 body,
@@ -215,6 +214,10 @@ address p,
   background-color: #f5f4fa;
 }
 
+.ourteam {
+  min-width: 1600px;   
+}
+
 .directory button:hover,
 .directory button:focus,
 .btservice,
@@ -355,6 +358,7 @@ address {
   background: url("../images/bgimg.jpg"), rgba(47, 48, 58, 0.4);
   padding: 200px 0px;
   margin-top: 16px;
+  max-width: 1600px;
 }
 .txtorg {
   margin: 78px 0px 80px 0px;
